# Air_sim

./: README.md
aerospace-comm-sim/: README.md  pyproject.toml  requirements.txt
aerospace-comm-sim/configs/: default.yaml
aerospace-comm-sim/experiments/: example_scenario.yaml
aerospace-comm-sim/notebooks/: prototype.ipynb
aerospace-comm-sim/scripts/: run_sim.sh
aerospace-comm-sim/src/agents/: aircraft.py  traffic_manager.py
aerospace-comm-sim/src/comms/: link.py  protocol.py
aerospace-comm-sim/src/environment/: __init__.py  region.py
aerospace-comm-sim/src/models/: kinematic.py
aerospace-comm-sim/src/sim/: __init__.py  scheduler.py  simulation.py
aerospace-comm-sim/src/utils/: cli.py  config.py
aerospace-comm-sim/tests/: test_comms.py  test_simulation.py
