[tool.poetry]
name = "aerospace-comm-sim"
version = "0.1.0"
description = "A simulation project for multiple aircraft communication in a defined region."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21"
scipy = "^1.7"
pyyaml = "^5.4"
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"